Correction of some FindBugs issues.
Some of the code was behaving poorly. As a result, some "bugs" were
identified in FindBugs. This patch includes some minor corrections to
address these issues.

Signed-off-by: Gary Pampara <gpampara@gmail.com>